fixes weird scrollbar issues by allowing overlay content to take up its full height

--- a/frontend/src/components/Overlay/Overlay.css
+++ b/frontend/src/components/Overlay/Overlay.css
@@ -42,7 +42,5 @@
 .overlay-content {
   padding: 1.5rem;
   text-align: center;
-  overflow: scroll;
   display: flex;
-  height: 100%;
 }
